# gql_rust_test

./: Cargo.toml
model/: Cargo.toml
model/src/: lib.rs  model.rs
