[package]
name = "actix-startwars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.22"
async-graphql-actix-web = "3.0.22"
actix-web = { version = "4.0.0-beta.19", default-features = false }
starwars = { path = "./model" }